; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_taskqueue.c_taskqueue_block.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_taskqueue.c_taskqueue_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.taskqueue = type { i32 }

@TQ_FLAGS_BLOCKED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @taskqueue_block(%struct.taskqueue* %0) #0 {
  %2 = alloca %struct.taskqueue*, align 8
  store %struct.taskqueue* %0, %struct.taskqueue** %2, align 8
  %3 = load %struct.taskqueue*, %struct.taskqueue** %2, align 8
  %4 = call i32 @TQ_LOCK(%struct.taskqueue* %3)
  %5 = load i32, i32* @TQ_FLAGS_BLOCKED, align 4
  %6 = load %struct.taskqueue*, %struct.taskqueue** %2, align 8
  %7 = getelementptr inbounds %struct.taskqueue, %struct.taskqueue* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = or i32 %8, %5
  store i32 %9, i32* %7, align 4
  %10 = load %struct.taskqueue*, %struct.taskqueue** %2, align 8
  %11 = call i32 @TQ_UNLOCK(%struct.taskqueue* %10)
  ret void
}

declare dso_local i32 @TQ_LOCK(%struct.taskqueue*) #1

declare dso_local i32 @TQ_UNLOCK(%struct.taskqueue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
